--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -8,7 +8,7 @@
     tools:context=".SearchActivity">
 
     <Button
-        android:id="@+id/button8"
+        android:id="@+id/toronto"
         android:layout_width="103dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -19,40 +19,39 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button9"
+        android:id="@+id/moscow"
         android:layout_width="107dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="93dp"
         android:layout_marginTop="16dp"
         android:text="@string/city2"
         android:onClick="moscow"
-        app:layout_constraintStart_toEndOf="@+id/button8"
+        app:layout_constraintStart_toEndOf="@+id/toronto"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button10"
+        android:id="@+id/vancouver"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="34dp"
-        android:text="@string/city3"
+        android:layout_marginTop="24dp"
         android:onClick="vancouver"
+        android:text="@string/city3"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button8" />
+        app:layout_constraintTop_toBottomOf="@+id/toronto" />
 
     <Button
-        android:id="@+id/button11"
+        android:id="@+id/shanghai"
         android:layout_width="111dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="90dp"
         android:layout_marginTop="34dp"
         android:text="@string/city4"
         android:onClick="shanghai"
-        app:layout_constraintStart_toEndOf="@+id/button10"
-        app:layout_constraintTop_toBottomOf="@+id/button9" />
+        app:layout_constraintStart_toEndOf="@+id/vancouver"
+        app:layout_constraintTop_toBottomOf="@+id/moscow" />
 
     <Button
-        android:id="@+id/button12"
+        android:id="@+id/london"
         android:layout_width="116dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
@@ -60,21 +59,21 @@
         android:text="@string/city5"
         android:onClick="london"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button10" />
+        app:layout_constraintTop_toBottomOf="@+id/vancouver" />
 
     <Button
-        android:id="@+id/button13"
+        android:id="@+id/cape_town"
         android:layout_width="109dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="80dp"
         android:layout_marginTop="44dp"
         android:text="@string/city6"
         android:onClick="cape_town"
-        app:layout_constraintStart_toEndOf="@+id/button12"
-        app:layout_constraintTop_toBottomOf="@+id/button11" />
+        app:layout_constraintStart_toEndOf="@+id/london"
+        app:layout_constraintTop_toBottomOf="@+id/shanghai" />
 
     <Button
-        android:id="@+id/button14"
+        android:id="@+id/los_angeles"
         android:layout_width="114dp"
         android:layout_height="52dp"
         android:layout_marginStart="16dp"
@@ -82,29 +81,30 @@
         android:text="@string/city7"
         android:onClick="los_angeles"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button12" />
+        app:layout_constraintTop_toBottomOf="@+id/london" />
 
     <Button
-        android:id="@+id/button15"
+        android:id="@+id/miami"
         android:layout_width="113dp"
         android:layout_height="51dp"
         android:layout_marginStart="82dp"
         android:layout_marginTop="47dp"
-        android:text="@string/city8"
         android:onClick="miami"
-        app:layout_constraintStart_toEndOf="@+id/button14"
-        app:layout_constraintTop_toBottomOf="@+id/button13" />
+        android:text="@string/city8"
+        app:layout_constraintStart_toEndOf="@+id/los_angeles"
+        app:layout_constraintTop_toBottomOf="@+id/cape_town" />
 
     <Button
         android:id="@+id/search"
         android:layout_width="89dp"
         android:layout_height="58dp"
+        android:layout_marginStart="5dp"
         android:layout_marginTop="76dp"
-        android:layout_marginEnd="8dp"
         android:onClick="search"
         android:text="Search"
         app:layout_constraintEnd_toStartOf="@+id/country"
-        app:layout_constraintTop_toBottomOf="@+id/button14" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/los_angeles" />
 
     <EditText
         android:id="@+id/country"
@@ -116,6 +116,7 @@
         android:hint="Country:"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/search"
         app:layout_constraintTop_toBottomOf="@+id/city" />
 
     <EditText
@@ -128,6 +129,7 @@
         android:hint="City:"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button14" />
+        app:layout_constraintStart_toEndOf="@+id/search"
+        app:layout_constraintTop_toBottomOf="@+id/los_angeles" />
 
 </android.support.constraint.ConstraintLayout>
